--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220416073250">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220416080154">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,103 +69,109 @@
 				<div class="hero__slider swiper">
 					<div class="hero__wrapper swiper-wrapper">
 						<div class="hero__slide slide-hero swiper-slide">
-							<div class="slide-hero__bg">
-								<img alt="">
-							</div>
-							<div class="slide-hero__container">
-								<img class="hero__image" src="img/main-slide.jpg" alt="">
-								<div class="slide-hero__body">
-									<div class="slide-hero__title">Godzilla vs. Kong – Official</div>
-									<div class="slide-hero__info">
-										<div class="slide-hero__views">
-											<span>1542 </span>views
-										</div>
-										<div class="slide-hero__rate">
-											<div class="slide-hero__like">
-												<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-													<path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z">
-													</path>
-												</svg>
-												<span>34</span>
-											</div>
-											<div class="slide-hero__dislike">
-												<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-													<path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z">
-													</path>
-												</svg>
-												<span>2</span>
-											</div>
-										</div>
-									</div>
-									<div class="slide-hero__author">Countdown</div>
+							<a href="" class="slide-hero__inner">
+								<div class="slide-hero__bg">
+									<img alt="">
 								</div>
-							</div>
+								<div class="slide-hero__container">
+									<img class="hero__image" src="img/main-slide.jpg" alt="">
+									<div class="slide-hero__body">
+										<div class="slide-hero__title">Godzilla vs. Kong – Official</div>
+										<div class="slide-hero__info">
+											<div class="slide-hero__views">
+												<span>1542 </span>views
+											</div>
+											<div class="slide-hero__rate">
+												<div class="slide-hero__like">
+													<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+														<path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z">
+														</path>
+													</svg>
+													<span>34</span>
+												</div>
+												<div class="slide-hero__dislike">
+													<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+														<path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z">
+														</path>
+													</svg>
+													<span>2</span>
+												</div>
+											</div>
+										</div>
+										<div class="slide-hero__author">Countdown</div>
+									</div>
+								</div>
+							</a>
 						</div>
 						<div class="hero__slide slide-hero swiper-slide">
-							<div class="slide-hero__bg">
-								<img alt="">
-							</div>
-							<div class="slide-hero__container">
-								<img class="hero__image" src="img/main-slide-2.jpg" alt="">
-								<div class="slide-hero__body">
-									<div class="slide-hero__title">Godzilla vs. Kong – Official</div>
-									<div class="slide-hero__info">
-										<div class="slide-hero__views">
-											<span>1542 </span>views
-										</div>
-										<div class="slide-hero__rate">
-											<div class="slide-hero__like">
-												<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-													<path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z">
-													</path>
-												</svg>
-												<span>34</span>
-											</div>
-											<div class="slide-hero__dislike">
-												<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-													<path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z">
-													</path>
-												</svg>
-												<span>2</span>
-											</div>
-										</div>
-									</div>
-									<div class="slide-hero__author">Countdown</div>
+							<a href="" class="slide-hero__inner">
+								<div class="slide-hero__bg">
+									<img alt="">
 								</div>
-							</div>
+								<div class="slide-hero__container">
+									<img class="hero__image" src="img/main-slide-2.jpg" alt="">
+									<div class="slide-hero__body">
+										<div class="slide-hero__title">Godzilla vs. Kong – Official</div>
+										<div class="slide-hero__info">
+											<div class="slide-hero__views">
+												<span>1542 </span>views
+											</div>
+											<div class="slide-hero__rate">
+												<div class="slide-hero__like">
+													<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+														<path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z">
+														</path>
+													</svg>
+													<span>34</span>
+												</div>
+												<div class="slide-hero__dislike">
+													<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+														<path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z">
+														</path>
+													</svg>
+													<span>2</span>
+												</div>
+											</div>
+										</div>
+										<div class="slide-hero__author">Countdown</div>
+									</div>
+								</div>
+							</a>
 						</div>
 						<div class="hero__slide slide-hero swiper-slide">
-							<div class="slide-hero__bg">
-								<img alt="">
-							</div>
-							<div class="slide-hero__container">
-								<img class="hero__image" src="img/main-slide-3.jpg" alt="">
-								<div class="slide-hero__body">
-									<div class="slide-hero__title">Godzilla vs. Kong – Official</div>
-									<div class="slide-hero__info">
-										<div class="slide-hero__views">
-											<span>1542</span> views
-										</div>
-										<div class="slide-hero__rate">
-											<div class="slide-hero__like">
-												<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-													<path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z">
-													</path>
-												</svg>
-												<span>34</span>
-											</div>
-											<div class="slide-hero__dislike">
-												<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-													<path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z">
-													</path>
-												</svg>
-												<span>2</span>
-											</div>
-										</div>
-									</div>
-									<div class="slide-hero__author">Countdown</div>
+							<a href="" class="slide-hero__inner">
+								<div class="slide-hero__bg">
+									<img alt="">
 								</div>
-							</div>
+								<div class="slide-hero__container">
+									<img class="hero__image" src="img/main-slide-3.jpg" alt="">
+									<div class="slide-hero__body">
+										<div class="slide-hero__title">Godzilla vs. Kong – Official</div>
+										<div class="slide-hero__info">
+											<div class="slide-hero__views">
+												<span>1542 </span>views
+											</div>
+											<div class="slide-hero__rate">
+												<div class="slide-hero__like">
+													<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+														<path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z">
+														</path>
+													</svg>
+													<span>34</span>
+												</div>
+												<div class="slide-hero__dislike">
+													<svg class="slide-hero__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+														<path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z">
+														</path>
+													</svg>
+													<span>2</span>
+												</div>
+											</div>
+										</div>
+										<div class="slide-hero__author">Countdown</div>
+									</div>
+								</div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -734,7 +740,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220416073250"></script>
+	<script src="js/app.min.js?_v=20220416080154"></script>
 </body>
 
 </html>
