--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220416073250">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220416080154">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,7 +70,8 @@
 					<div class="page-video__body body-page-video">
 						<div class="body-page-video__content">
 							<div class="body-page-video__video">
-								<video data-src="files/1.mp4" controls poster="img/1.jpg"></video>
+
+								<iframe src="https://www.youtube.com/embed/_i_Bgg1nvSQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="body-page-video__title">The World in HDR in 4K (ULTRA HD)</div>
 							<div class="body-page-video__views">22670 views</div>
@@ -726,7 +727,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220416073250"></script>
+	<script src="js/app.min.js?_v=20220416080154"></script>
 </body>
 
 </html>
